@@ -8,11 +8,11 @@
     <parent>
         <groupId>com.yahoo.vespa</groupId>
         <artifactId>parent</artifactId>
-        <version>6-SNAPSHOT</version>
+        <version>7-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <artifactId>jdisc_core</artifactId>
-    <version>6-SNAPSHOT</version>
+    <version>7-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <dependencies>
@@ -47,6 +47,7 @@
             <version>1.2</version>
         </dependency>
         <dependency>
+            <!-- TODO: mockito-all is deprecated (includes old hamcrest). Use mockito-core if possible -->
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
@@ -112,6 +113,12 @@
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.framework</artifactId>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>animal-sniffer-annotations</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -232,6 +239,7 @@
                         <configuration>
                             <executable>java</executable>
                             <arguments>
+                                <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
                                 <argument>-classpath</argument>
                                 <classpath />
                                 <argument>com.yahoo.jdisc.core.ExportPackages</argument>
@@ -308,39 +316,6 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>test-logfmt</id>
-            <activation>
-                <property>
-                    <name>!skipTests</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>test-logfmt</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>${project.basedir}/src/test/perl/vespa-jdisc-logfmt-test.sh</executable>
-                                    <arguments>
-                                        <argument>${project.basedir}/src/main/perl/vespa-jdisc-logfmt</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
     <properties>
         <exportPackagesFile>${project.build.directory}/classes/exportPackages.properties</exportPackagesFile>
     </properties>
